# dirloc

./: CMakeLists.txt  MainWindow.cpp  MainWindow.hh  README.md  dirloc.cpp  dirloc.hh  main.cpp
